# EvolutionSimulation

./: .gitignore  CMakeLists.txt  profile.sh
.github/workflows/: BuildSite.yml  WASM.yml  WebCompile.yml  perf.yml
_site/perf/config/: config.json
_site/perf/profiling/: profile_program.py
_site/perf/util/: compile_program.py
_site/src/: game_state.cpp  quad_tree.cpp  quad_tree.h  random.cpp  random.h  simulation.cpp
_site/src/factories/: creature_factory.h  plant_factory.cpp  plant_factory.h
_site/src/mutators/: brain_mutator.cpp  brain_mutator.h
_site/src/systems/: death_system.h  digestion_system.cpp  environment_system.h  metabolism_system.cpp  movement_system.cpp  renderer.h  reproduction_system.cpp  reproduction_system.h  sensor_system.h
_site/web-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json
_site/website/compile/: jekyll_compile.py  web_compile.py
_site/website/util/: util.py
perf/: perf_main.py
perf/benchmark/: benchmark.py
perf/profiling/: profile_program.py
perf/util/: compile_program.py  read_config.py  util.py
site/jekyll_site/: _config.yml
site/jekyll_site/_posts/: 2026-05-01-welcome-to-jekyll.markdown
site/jekyll_site/assets/: home.css
src/: components.h  fertility.cpp  fertility.h  game_state.h  main.cpp  quad_tree.cpp  quad_tree.h  random.cpp  random.h  renderer.cpp  renderer.h  simulation.cpp  simulation.h
src/components/: components.h
src/components/brain/: brain.cpp  brain.h  node.cpp  node.h
src/factories/: brain_factory.cpp  brain_factory.h  carcass_factory.cpp  carcass_factory.h  creature_factory.cpp  creature_factory.h  plant_factory.cpp  plant_factory.h
src/mutators/: brain_mutator.cpp  brain_mutator.h  genome_mutator.cpp  genome_mutator.h
src/systems/: cleanup_system.cpp  cleanup_system.h  collision_system.cpp  collision_system.h  death_system.cpp  death_system.h  digestion_system.cpp  digestion_system.h  eating_system.cpp  eating_system.h  environment_system.cpp  environment_system.h  metabolism_system.cpp  metabolism_system.h  movement_system.cpp  movement_system.h  plant_system.cpp  plant_system.h  renderer.cpp  renderer.h  reproduction_system.cpp  reproduction_system.h  sensor_system.cpp  sensor_system.h  spatial_index_system.cpp  spatial_index_system.h  thinking_system.cpp  thinking_system.h
website/: compile_site.py  requirements.txt
website/compile/: jekyll_compile.py  jekyll_update.py  web_compile.py
website/jekyll_site/: .gitignore  Gemfile  _config.yml  performance.markdown
website/jekyll_site/_layouts/: about.html  flamegraph.html  home.html  performance.html
website/jekyll_site/_posts/: 2026-05-02-17-27-04-flamegraph.md  2026-05-02-17-27-48-flamegraph.md  2026-05-02-21-47-11-flamegraph.md  2026-05-02-21-49-38-flamegraph.md  2026-05-02-21-50-23-flamegraph.md  2026-05-02-22-00-55-flamegraph.md  2026-05-02-22-01-39-flamegraph.md  2026-05-02-22-02-23-flamegraph.md  2026-05-03-05-37-14-flamegraph.md  2026-05-03-05-48-57-flamegraph.md  2026-05-03-06-04-56-flamegraph.md  2026-05-03-06-19-57-flamegraph.md  blank.txt  (+10 more)
website/util/: util.py
(+7 files in other folders)
